<?xml version="1.0"?>
<package format="2">
  <name>swarm_bridge</name>
  <version>0.0.0</version>
  <description>The swarm_bridge package</description>
  <maintainer email="nanhe_chen@zju.edu.cn">nanhe_chen</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
